--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.0",
     "joi": "^10.6.0",
+    "moment": "^2.18.1",
     "mongoose": "^4.8.6",
     "morgan": "^1.8.2",
     "passport": "^0.3.2"
