--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^4.15.0",
     "joi": "^10.6.0",
     "moment": "^2.18.1",
-    "mongoose": "^4.8.6",
+    "mongoose": "4.8.6",
     "morgan": "^1.8.2",
     "passport": "^0.3.2"
   },
