edited models relationship

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "joi": "^10.6.0",
     "moment": "^2.18.1",
     "mongoose": "^4.10.8",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "swagger-ui-express": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
