--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "swagger-ui-express": "^2.0.1"
+    "swagger-ui-express": "^2.0.1",
+    "voucher-code-generator": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
