added Hystrix metrics middleware (circuit breaker pattern)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.0",
+    "express-hystrix": "^1.0.2",
+    "express-hystrix-toobusy": "^1.0.0",
+    "hystrix-dashboard": "^1.0.3",
     "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
