--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.3.2",
     "socket.io": "^2.0.3",
     "swagger-ui-express": "^2.0.1",
+    "twilio": "^2.1.1",
     "voucher-code-generator": "^1.1.1"
   },
   "devDependencies": {
