env file changes

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 SERVER_PORT=8080
 
-MONGODB_URL=mongodb://localhost:27017/mbooking
+MONGODB_URL=mongodb://eugene:1@ds261527.mlab.com:61527/moviebooking
 
 JWT_SECRET=movie_secret
 
