changes in twilio helper

--- a/.env
+++ b/.env
@@ -3,8 +3,15 @@ PORT=8080
 
 MONGODB_URL=mongodb://eugene:1@ds261527.mlab.com:61527/moviebooking
 
-JWT_SECRET=movie_secret
+JWT_SECRET=movie_booking_secret
 
 INVITE_CODE_CHARSET=0123456789
 INVITE_CODE=16
 INVITE_CODE_LENGTH=16
+
+TWILIO_ACCOUNT_SID=ACe6bff8f4cd8c08bd5b088616f2c59c1f
+TWILIO_AUTH_TOKEN=36fb029f5ddd847ed2b7ea641421c0a6
+
+CLOUDINARY_CLOUD_NAME=moviebooking
+CLOUDINARY_API_KEY=155598911296568
+CLOUDINARY_API_SECRET=FAqvMX2gbj4frNRwPbU4OOkHbrk
