--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.18.1",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "socket.io": "^2.0.3",
     "swagger-ui-express": "^2.0.1",
